fix button and image width alignment on index

--- a/_sass/layouts/_containers.scss
+++ b/_sass/layouts/_containers.scss
@@ -316,6 +316,20 @@
         align-self: flex-start;
         text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
     }
+    
+    .featured-info {
+        padding: 0;
+    }
+    
+    .featured-actions {
+        align-self: center;
+        width: 100%;
+        margin-top: 0;
+        
+        .cta-button {
+            width: 100%;
+        }
+    }
 }
 
 .now-playing {
